# mentor-prehook-ghaction

./: .pre-commit-config.yaml  Pipfile  README.md  main.css  main.py  pyproject.toml
.github/examples/: pre-commit.yml
.github/workflows/: app.yaml  pipenv.yaml
static/javascript/: javascript.js
templates/: index.html
terraform/: main.tf  provider.tf
