[tool.poetry]
name = "Python Checking"
description = "Python Checking"
version = "0.1.0"
authors = [
    { name = "Najib Radzuan", email = "iamnajibradzuan@gmail.com" }
]
dependencies = [
    "pyspark[ml]",
    "sklearn"
]

[project.optional-dependencies]
dev = [
    "tox",
    "pre-commit",
    "bump2version"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]