[tool.poetry]
name = "Python Checking"
description = "Python Checking"
version = "0.1.0"
authors = ["Najib Radzuan <iamnajibradzuan@gmail.com>"]
dependencies = [
    "pyspark[ml]",
    "sklearn"
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "1.0.0"

[tool.poetry.dev.dependencies]

[build-system]
requires = ["poetry_core >=1.0.0"]
build-backend = "poetry.core.masonry.api"