[tool.poetry]
name = "Python Checking"
description = "Python Checking"
version = "0.1.0"
authors = ["Najib Radzuan <iamnajibradzuan@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
flask = "1.0.0"
safety = "2.3.5"
flake8 = ">=3.8.1,<4.0"
pytest = "7.2.2"

[build-system]
requires = ["poetry_core >=1.0.0", "python >=3.7"]
build-backend = "poetry.core.masonry.api"